# MaizeMix

./: .gitignore  AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioRequester.cpp  AudioRequester.h  CMakeLists.txt  Music.h  SoundReference.h  license  main.cpp  readme.md
sandbox/: CMakeLists.txt  main.cpp
scripts/Linux/: install-dependencies.sh  uninstall-dependencies.sh
src/: CMakeLists.txt  MaizeMix.h  main.cpp
src/AudioEngine/: AudioEngine.cpp  AudioEngine.h  Music.cpp  Music.h  SoundReference.cpp  SoundReference.h
src/MaizeMix/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioFinishCallback.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  MaizeMix.h  Music.cpp  Music.h  SoundReference.cpp  SoundReference.h
src/MaizeMix/Audio/: AudioClip.cpp  AudioClip.h  Music.cpp  Music.h  SoundBuffer.cpp  SoundBuffer.h  SoundReference.cpp  SoundReference.h
src/MaizeMix/Audio/Data/: Clip.h  SoundBuffer.cpp  SoundBuffer.h  SoundReference.cpp  SoundReference.h
src/MaizeMix/Engine/: AudioEngine.cpp  AudioEngine.h  AudioFinishCallback.h  AudioManager.cpp  AudioManager.h
src/MaizeMix/Engine/EngineHandler/: SoundHandler.cpp  SoundHandler.h  StreamHandler.cpp  StreamHandler.h
src/MaizeMix/Helper/: AudioManager.cpp  AudioManager.h  AudioSpecification.h  Music.cpp  SoundData.h
src/MaizeMix/Helper/AudioClips/: SoundBuffer.cpp  SoundBuffer.h  SoundReference.cpp  SoundReference.h
src/MaizeMix/Sounds/: SoundBuffer.cpp  SoundBuffer.h  SoundHandler.cpp  SoundHandler.h
src/MaizeMix/Streaming/: Music.cpp  Music.h  SoundReference.cpp  SoundReference.h  StreamHandler.cpp  StreamHandler.h
test/: AudioEngine.test.cpp  AudioManager.test.cpp  CMakeLists.txt  SoundHandler.test.cpp  StreamHandler.test.cpp
testbed/: CMakeLists.txt  main.cpp  test_AudioSystem.cpp  test_AudioSystem.h  test_Callback.h  test_Components.h
